--- a/servers/json-server/package.json
+++ b/servers/json-server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "json-server --watch db.json",
+    "serve": "json-server --watch db.json",    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.15.1"
+    "json-server": "^0.15.1",
+    "node-fetch": "^2.6.0"
   }
 }
